<resources>
    <!--  App stuff  -->
    <string name="app_name">Task Timer</string>
    <string name="title_activity_add_edit">Add or Edit Task</string>
    <string name="title_activity_durations_report">Durations</string>
    <string name="durations_fragment_label">Task Durations Fragment</string>

    <!-- Strings used for fragments for navigation -->
    <string name="main_fragment_label">Main Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <!-- Task Item strings -->
    <string name="no_task_message">No Task Selected</string>
    <string name="edit_button_description">Button for editing list item</string>
    <string name="delete_button_description">Button for deleting list item</string>

    <!-- Main Options Menu items -->
    <string name="menu_item_add_task">Add Task</string>
    <string name="menu_item_show_durations">Durations Report</string>
    <string name="menu_item_settings">Settings</string>
    <string name="menu_item_about">About TaskTimer</string>
    <string name="menu_item_generate">Generate Data</string>

    <!--  Durations Options Menu items  -->
    <string name="rm_title_filter_day">Show day</string>
    <string name="rm_title_filter_week">Show week</string>
    <string name="rm_title_filter_date">Set report date</string>
    <string name="rm_title_delete">Delete old timings</string>

    <!-- Hints -->
    <string name="add_edit_name_hint">Task Name</string>
    <string name="add_edit_description_hint">Task Description (optional)</string>
    <string name="add_edit_sortorder_hint">Sort Order (optional)</string>

    <!--  Dialogs  -->
    <string name="deldiag_positive_caption">Delete</string>
    <string name="deldiag_message">Deleting will also delete all timing data associated with\n\n%s</string>
    <string name="cancelEditDiag_message">There are unsaved changes. Do you want to abandon your changes, or continue editing?</string>
    <string name="cancelEditDiag_positive_caption">Continue</string>
    <string name="cancelEditDiag_negative_caption">Abandon</string>
    <string name="copyright_info">Copyright © 2020 LearnProgramming.academy</string>
    <string name="about_weblink">Instruction available at www.learnprogramming.academy</string>
    <string name="about_icon">Icon derived from <b>analog clock</b> at openclipart.org by <b>Anonymous</b></string>

    <!--  Task Durations Recycler View Titles  -->
    <string name="td_text_name">Task Name</string>
    <string name="td_text_date">Date</string>
    <string name="td_text_duration">Duration</string>
    <string name="td_text_description">Description</string>

    <!--  Generic stuff   -->
    <string name="save">Save</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="date_title_filter">Select the date for report</string>
    <string name="date_title_delete">Select the date to delete up to</string>
    <string name="delete_timings_message">Are you sure you want to delete all timings before %s?</string>
</resources>
