<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.firatyildiz.tasktimer.app.MainActivity">
    <item
        android:id="@+id/menuMain_addTask"
        android:icon="@drawable/baseline_post_add_24"
        android:orderInCategory="100"
        android:title="@string/menu_item_add_task"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menuMain_showDurations"
        android:icon="@android:drawable/ic_menu_view"
        android:orderInCategory="101"
        android:title="@string/menu_item_show_durations"
        app:showAsAction="never" />
    <item
        android:id="@+id/menuMain_about"
        android:icon="@android:drawable/ic_menu_info_details"
        android:orderInCategory="103"
        android:title="@string/menu_item_about"
        app:showAsAction="never" />
    <item
        android:id="@+id/menuMain_generate"
        android:orderInCategory="104"
        android:title="@string/menu_item_generate"
        android:visible="false"
        app:showAsAction="never" />
</menu>
